Java 17 + upgrade dependencies