@@ -8,14 +8,24 @@
 	<artifactId>sgt-puzzles-solvers</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
+	<properties>
+		<maven.compiler.release>17</maven.compiler.release>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.drools</groupId>
 				<artifactId>drools-bom</artifactId>
 				<type>pom</type>
-				<version>7.30.0.Final</version>
+				<version>7.74.1.Final</version>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.thoughtworks.xstream</groupId>
+				<artifactId>xstream</artifactId>
+				<version>1.4.21</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -32,6 +42,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.drools</groupId>
+			<artifactId>drools-mvel</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
 			<artifactId>drools-compiler</artifactId>
 			<scope>runtime</scope>
 		</dependency>
@@ -44,17 +58,22 @@
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
-			<version>0.9.11</version>
+			<version>0.10.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.16</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.3.12</version>
+			<version>1.5.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.10</version>
+			<version>1.18.30</version>
 		</dependency>
 		<!-- Test dependencies -->
 		<dependency>
@@ -76,16 +95,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<release>13</release>
-					<compilerArgs>--enable-preview</compilerArgs>
-				</configuration>
+				<version>3.11.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.kie</groupId>
 				<artifactId>kie-maven-plugin</artifactId>
-				<version>7.30.0.Final</version>
+				<version>7.74.1.Final</version>
 				<extensions>true</extensions>
 			</plugin>
 		</plugins>
